# wallpaper-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  wallpaper-service.service  wallpaperctl
app/: config.py  database.py  logging_config.py  main.py  models.py  repository.py  routes.py  selector.py  unsplash.py
tests/: conftest.py  test_api.py  test_repository.py  test_unsplash.py
